--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <resources>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="_75dp">75dp</dimen>
+    <dimen name="_12dp">12dp</dimen>
+    <dimen name="_10dp">10dp</dimen>
+    <dimen name="_0dp">0dp</dimen>
+    <dimen name="_60dp">60dp</dimen>
+    <dimen name="_40dp">40dp</dimen>
 </resources>
