--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,7 @@
     <dimen name="_0dp">0dp</dimen>
     <dimen name="_60dp">60dp</dimen>
     <dimen name="_40dp">40dp</dimen>
+    <dimen name="_300dp">300dp</dimen>
+    <dimen name="_20dp">20dp</dimen>
+    <dimen name="_27sp">27sp</dimen>
 </resources>
