--- a/app/src/main/res/layout/fragment_second.xml
+++ b/app/src/main/res/layout/fragment_second.xml
@@ -25,7 +25,7 @@
 
             <TextView
                 android:text="@string/date"
-                android:textSize="@dimen/_27sp"
+                android:textSize="@dimen/_25sp"
                 android:textColor="?colorOnPrimary"
                 android:textStyle="bold"
                 android:layout_weight="1"
@@ -50,7 +50,7 @@
 
             <TextView
                 android:text="@string/first_name"
-                android:textSize="@dimen/_27sp"
+                android:textSize="@dimen/_25sp"
                 android:textColor="?colorOnPrimary"
                 android:textStyle="bold"
                 android:layout_weight="1"
@@ -59,7 +59,7 @@
 
             <EditText
                 android:id="@+id/etFirstName"
-                android:textSize="@dimen/_27sp"
+                android:textSize="@dimen/_25sp"
                 android:textStyle="bold"
                 android:layout_weight="2"
                 android:layout_width="@dimen/_0dp"
@@ -74,7 +74,7 @@
 
             <TextView
                 android:text="@string/last_name"
-                android:textSize="@dimen/_27sp"
+                android:textSize="@dimen/_25sp"
                 android:textColor="?colorOnPrimary"
                 android:textStyle="bold"
                 android:layout_weight="1"
@@ -83,6 +83,30 @@
 
             <EditText
                 android:id="@+id/etLastName"
+                android:textSize="@dimen/_27sp"
+                android:textStyle="bold"
+                android:layout_weight="2"
+                android:layout_width="@dimen/_0dp"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_marginTop="@dimen/_20dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:text="@string/title"
+                android:textSize="@dimen/_25sp"
+                android:textColor="?colorOnPrimary"
+                android:textStyle="bold"
+                android:layout_weight="1"
+                android:layout_width="@dimen/_0dp"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:id="@+id/etTitle"
                 android:textSize="@dimen/_27sp"
                 android:textStyle="bold"
                 android:layout_weight="2"
